# tdlib-futures

./: .gitignore  Cargo.toml
examples/: test.rs
src/: client.rs  lib.rs  tdjson.rs  types.rs
tdlib-futures/: .gitignore  Cargo.toml  build.rs  td_api.tl
tdlib-futures/examples/: test.rs
tdlib-futures/src/: client.rs  lib.rs  tdjson.rs  types.rs  utils.rs
tdlib-types/: Cargo.toml  build.rs  td_api.tl
tdlib-types/src/: lib.rs
tl-codegen/: Cargo.toml
tl-codegen/src/: lib.rs  tl.pest
