[package]
name = "tdlib-futures"
version = "0.1.0"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
description = "Futures-based telegram client library powered by tdlib"
license = "MIT OR Apache-2.0"
keywords = [
    "telegram",
    "api",
    "tdlib",
]

[dependencies]
futures = "0.1.24"
serde = "1.0.78"
serde_json = "1.0.27"
serde_derive = "1.0.78"
tdjson = "0.2.2" 
tdlib-types = "0.1.0"
tokio-core = "0.1.17"
serde-aux = "0.5.3"
log = "0.4.5"


[dev-dependencies]
dotenv = "0.13.0"

