[package]
edition = "2018"
name = "tdlib-futures"
version = "0.1.0"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
description = "Futures-based telegram client library powered by tdlib"
license = "MIT OR Apache-2.0"
keywords = [
    "telegram",
    "api",
    "tdlib",
]

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.27"
serde_derive = "1.0.78"
tdjson = {path = "../../tdjson-rs"} 
tdlib-types = {path = "../tdlib-types"}
serde-aux = "0.5.3"
log = "0.4.5"
futures = "0.3.5"
blocking = "0.4.6"


[dev-dependencies]
dotenv = "0.13.0"
env_logger = "0.7.1"

