[package]
name = "tl-codegen"
version = "0.1.0"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
description = "Generate rust types from a tl file"
license = "MIT OR Apache-2.0"
keywords = [
    "telegram",
    "tl",
    "generator",
    "api",
]

[dependencies]
pest = "1.0.6"
pest_derive = "1.0.8"
quote = "0.3.15"
