[package]
name = "tl-codegen"
version = "0.1.0"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
description = "Generate rust types from a tl file"
license = "MIT OR Apache-2.0"
keywords = [
    "telegram",
    "tl",
    "generator",
    "api",
]

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
quote = "1.0.4"
proc-macro2 = "1.0.12"
